# SysToolkit

./: .gitignore  About.tsx  LICENSE  LICENSE-COMMERCIAL-TEMPLATE.md  LICENSE-DUAL.md  QuickActionsPanel.tsx  README.md  README_addition.md  Sidebar.tsx  index.html  package-lock.json  package.json  start-system-monitor.bat  vite.config.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: docker_commands.rs  file_monitor.rs  mod.rs  port_monitor.rs  process_analyzer.rs  shell_commands.rs  system_info.rs
src-tauri/src/monitor/: docker.rs  file.rs  mod.rs  port.rs
src-tauri/src/rules/: mod.rs  process_rules.rs  project_detector.rs
src-tauri/src/utils/: mod.rs  process_utils.rs  system_info.rs
src/components/Common/: About.tsx  Header.tsx  LoadingSpinner.tsx  Notification.tsx  QuickActionsPanel.tsx  Settings.tsx  ShortcutHelp.tsx  Sidebar.tsx  SystemStatus.tsx  TestRunner.tsx
src/components/Dashboard/: DiskUsage.tsx  HardwareMonitor.tsx  NetworkStatus.tsx  QuickActions.tsx  SystemDashboard.tsx  SystemDashboard.tsx.bak  SystemOverview.tsx
src/components/Docker/: DockerContainerCard.tsx  DockerMonitor.tsx
src/components/FileMonitor/: FileMonitor.tsx  FileOccupancyCard.tsx
src/context/: NotificationContext.tsx  ThemeContext.tsx
src/styles/: App.css  animations.css  index.css  theme.css
src/types/: docker.ts  file.ts  port.ts  process.ts  system.ts
src/utils/: errorHandler.ts  keyboardShortcuts.ts  performanceMonitor.ts  testUtils.ts
(+8 files in other folders)
